<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hotmail.oswaldosaldivar.basededatos1.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/lineal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nombre"
                android:text="@string/nombre"
                android:layout_marginTop="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"

                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editnombre"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/apellidos"
                android:text="@string/apellidos"
                android:layout_marginTop="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"


                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editapellidos"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/materias"
                android:text="@string/materias"
                android:layout_marginTop="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"

                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editmaterias"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/id"
                android:text="@string/id"
                android:layout_marginTop="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editid"
                android:layout_marginTop="5dp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/boton"
                android:text="@string/datos"
                android:layout_marginTop="2.5dp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ver"
                android:text="@string/ver_datos"
                android:layout_marginTop="5dp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/actualizar"
                android:layout_marginTop="5dp"
                android:text="@string/actualizar"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/borrar"
                android:layout_marginTop="5dp"
                android:text="@string/borrar"
                />




        </LinearLayout>


    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
